Fix whitespace on landing page

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -12,6 +12,7 @@
   grid-template-columns: repeat(12, 1fr);
   padding-top: 5vmin;
   text-shadow: none;
+  margin: 0;
 }
 
 .landing h1::before {
